<resources>
    <string name="app_name">TownTrekker</string>

    <string name="titlu_postari">Postări</string>
    <string name="titlu_exploreaza">Explorează</string>
    <string name="titlu_descopera">Descoperă</string>
    <string name="titlu_cont">Cont</string>

    <string name="nav_meniu_postari">Postări</string>
    <string name="nav_meniu_exploreaza">Explorează</string>
    <string name="nav_meniu_gol" />
    <string name="nav_meniu_descopera">Descoperă</string>
    <string name="nav_meniu_cont">Cont</string>

    <string name="fab_adaugare">buton adăugare postare</string>

    <string name="auth_titlu">Autentificare</string>
    <string name="auth_buton">Creează cont</string>
    <string name="auth_alias">Alias</string>
    <string name="to_auth"><u>Nu ai cont? Înregistrează-te aici.</u></string>

    <string name="logare_titlu">Logare</string>
    <string name="login_button_google">Continuă cu contul Google</string>
    <string name="login_other_login_method">sau loghează-te folosind emailul</string>
    <string name="logare_parola_toggle">ascundere/afișare parolă</string>
    <string name="logare_buton">Loghează-te</string>
    <string name="to_login"><u>Ai deja cont? Loghează-te aici.</u></string>

    <string name="resetare_titlu">Resetare parolă</string>
    <string name="resetare_buton">Resetează</string>
    <string name="resetare_parola"><u>Ai uitat parola?</u></string>

    <string name="hint_email">Email</string>
    <string name="hint_parola">Parolă</string>

    <string name="img_splash">Logo SplashScreen</string>
    <string name="label_splash">SplashScreen</string>

    <string name="postari_nu_exista_postari_feed">Nu există nicio postare în feed</string>
    <string name="postare_icon_user_desc">logo user</string>
    <string name="postare_nume_user">alias user test</string>
    <string name="postare_icon_nume_locatie">icon nume locație</string>
    <string name="postare_nume_locatie">nume locație test</string>
    <string name="postare_icon_adresa_locatie">icon adresă locație</string>
    <string name="postare_adresa_locatie">stradă locație test număr, oraș locație test, cod poștal test, țară locație test</string>
    <string name="postare_apreciere_desc">apreciere postare</string>
    <string name="postare_numar_aproecieri">100.24K</string>
    <string name="postare_descriere">\t\tDescriere postare</string>
    <string name="postare_descriere_tab">\t\t</string>
    <string name="postare_media_prev">prev</string>
    <string name="postare_media_next">next</string>

    <string name="adaugare_comentariu_hint">Adaugă un comentariu…</string>

    <string name="comentariu_trimite_desc">trimite comentariu</string>
    <string name="comentariu_user_test">comentariu test user</string>

    <string name="postare_comentarii"><u>Vizualizare comentarii</u></string>

    <string name="media_imagine">imagine</string>
    <string name="media_video">video</string>

    <string name="exploreaza_harta">harta din pagina de explorare</string>

    <string name="recomandare_logo_locatie">logo locație</string>
    <string name="recomandare_icon_nume_locatie">nume locație</string>
    <string name="recomandare_rating_locatie">4.25</string>
    <string name="recomandare_nume_locatie">icon nume locație</string>
    <string name="recomandare_icon_adresa_locatie">icon adresa locație</string>
    <string name="recomandare_adresa_locatie">stradă locație test număr, oraș locație test, cod poștal test, țară locație test</string>
    <string name="recomandare_descriere">\t\tDescriere locație</string>
    <string name="recomandare_descriere_tab">\t\t</string>

    <string name="cont_icon_desc">icon cont</string>
    <string name="titlu_cont_complet">Contul meu</string>
    <string name="alias_cont">alias</string>
    <string name="email_cont">Email</string>
    <string name="email_cont_user">email@email.com</string>
    <string name="vizualizare_postari_cont">Postările mele\n</string>
    <string name="vizualizare_postari_user">Postări\n</string>
    <string name="vizualizare_urmaritori">Urmăritori\n</string>
    <string name="vizualizare_urmareste">Urmărește\n</string>
    <string name="bio_cont">Despre mine</string>
    <string name="bio_cont_user" />
    <string name="parola_cont">Parolă</string>
    <string name="parola_cont_edit">parolă</string>
    <string name="logout_cont">Ieși din cont</string>

    <string name="user_urmareste_icon">icon urmareste user</string>
    <string name="user_urmareste_text">Urmărești</string>
    <string name="user_urmareste_text_icon_desc">urmărești userul</string>
    <string name="postare_tip_recenzie">tip recenzie</string>

    <string name="adaugare_postare_titlu">Adaugă o postare</string>
    <string name="adaugare_postare_locatie">Locație</string>
    <string name="adaugare_postare_locatie_hint">Adaugă o locație</string>
    <string name="adaugare_postare_descriere">Descriere</string>
    <string name="adaugare_postare_descriere_hint">Adaugă o descriere</string>
    <string name="adaugare_postare_media">Adaugă imagine/video</string>
    <string name="adaugare_postare_media_fisier">imagine/video</string>
    <string name="adaugare_postare_media_fisier_eliminare">eliminare imagine/video</string>

    <string name="id_harta">4e438cf8a6ba2b9d</string>
    <string name="cauta_locatie">Caută o locație</string>

</resources>