<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_meniu">

    <item
        android:id="@+id/nav_postari"
        android:icon="@drawable/icon_meniu_postari"
        android:title="@string/nav_meniu_postari" />

    <item
        android:id="@+id/nav_exploreaza"
        android:icon="@drawable/icon_meniu_exploreaza"
        android:title="@string/nav_meniu_exploreaza" />

    <item android:title="@string/nav_meniu_gol" />

    <item
        android:id="@+id/nav_descopera"
        android:icon="@drawable/icon_meniu_descopera"
        android:title="@string/nav_meniu_descopera" />

    <item
        android:id="@+id/nav_cont"
        android:icon="@drawable/icon_meniu_cont"
        android:title="@string/nav_meniu_cont" />

</menu>