<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="7.5dp"
    android:layout_marginVertical="10dp"
    android:background="#00000000"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7.5dp"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/icon_user_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:id="@+id/icon_user"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:contentDescription="@string/postare_icon_user_desc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_cont" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/postare_user_locatie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="12.5dp"
                android:layout_toStartOf="@+id/postare_apreciere_layout"
                android:layout_toEndOf="@id/icon_user_card"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:scrollbarSize="2dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/user_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/nume_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/postare_nume_user"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/user_urmareste_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/user_urmareste_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/user_urmareste_text"
                                android:textSize="11sp" />

                            <ImageView
                                android:layout_width="11sp"
                                android:layout_height="11sp"
                                android:layout_gravity="center"
                                android:layout_marginStart="5dp"
                                android:contentDescription="@string/user_urmareste_text_icon_desc"
                                android:src="@drawable/icon_user_urmareste_poz" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <ImageView
                            android:id="@+id/tip_recenzie"
                            android:layout_width="25sp"
                            android:layout_height="25sp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:contentDescription="@string/postare_tip_recenzie"
                            android:visibility="gone"
                            tools:visibility="visible" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </HorizontalScrollView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_locatie"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:contentDescription="@string/postare_icon_nume_locatie"
                        android:src="@drawable/icon_locatie" />

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:scrollbarSize="2dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/nume_locatie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/postare_nume_locatie"
                            android:textSize="12sp" />

                    </HorizontalScrollView>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:contentDescription="@string/postare_icon_adresa_locatie"
                        android:src="@drawable/icon_adresa" />

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:scrollbarSize="2dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/adresa_locatie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:text="@string/postare_adresa_locatie"
                            android:textSize="12sp"
                            tools:ignore="VisualLintBounds" />

                    </HorizontalScrollView>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/postare_apreciere_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageButton
                    android:id="@+id/postare_apreciere"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/postare_apreciere_desc"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_apreciere_gol"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nr_aprecieri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/postare_numar_aproecieri"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7.5dp"
            android:layout_marginVertical="5dp"
            android:text="@string/postare_descriere"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/media_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="2.5dp"
            android:layout_marginVertical="10dp"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            tools:visibility="visible">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/left_nav"
                    android:layout_width="24dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical|start"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/postare_media_prev"
                    android:src="@drawable/icon_prev"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/media"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/right_nav"
                    android:layout_width="24dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical|end"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/postare_media_next"
                    android:src="@drawable/icon_next"
                    tools:ignore="TouchTargetSizeCheck" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/comentarii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:text="@string/postare_comentarii"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>