<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="50dp"
    android:layout_marginVertical="75dp"
    android:background="@drawable/adauga_postare_shape"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/adaugare_titlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/adaugare_postare_titlu"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17.5dp"
        android:text="@string/adaugare_postare_locatie"
        android:textSize="22sp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_locatie_autocompletare"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        tools:layout="@layout/places_autocomplete_fragment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17.5dp"
        android:text="@string/adaugare_postare_descriere"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/adaugare_descriere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:hint="@string/adaugare_postare_descriere_hint"
        android:inputType="text|textAutoCorrect|textCapSentences|textMultiLine|textAutoComplete"
        android:maxLines="10"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/adaugare_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/adaugare_postare_media"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <RelativeLayout
        android:id="@+id/previzualizare_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_media"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/card_adaugare"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_adaugare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="16dp">

            <ImageButton
                android:id="@+id/adaugare_media_plus"
                style="@style/StergereMedia"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/adaugare_postare_media"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_adaugare"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>